@@ -1,3 +1,10 @@
+2004-02-01  Sam Steingold  <sds@gnu.org>
+
+	* spvw.d (my_malloc): malloc() with error check
+	* lispbibl.d, genclisph.d (my_malloc): export
+	* foreign.d (xmalloc): removed, use my_malloc() instead
+	* modules/clx/new-clx/clx.f, modules/regexp/regexi.c: ditto
+
 2004-01-31  Sam Steingold  <sds@gnu.org>
 
 	* pathname.d (looks_logical_p): return true only if all the
